[package]
name = "imgurs-client"
version = "0.2.0"
authors = ["Filippo Berto <berto.f@protonmail.com>"]
edition = "2018"
categories = ["api-bindings"]
keywords = ["Imgur", "api"]
repository = "https://github.com/bertof/Imgurs"
license = "MIT"
description = "Client for a typed and safe interface to the Imgur API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
imgurs-model = "0.2"
reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
time = { version = "0.3", features = [ "serde", "macros", "serde-human-readable", "serde-well-known" ] }
tracing = { version = "0.1", features = [ "attributes" ] }
url = { version = "2.2", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.13", features = [ "rt-multi-thread", "macros" ] }

[features]
default = []
log = ["tracing/log"]
