[package]
name = "imgurs-model"
version = "0.1.0"
authors = ["Filippo Berto <berto.f@protonmail.com>"]
edition = "2018"
categories = ["API"]
keywords = ["Imgur", "api"]
repository = "https://github.com/bertof/Imgurs"
license = "MIT"
description = "A typed and safe model of the Imgur API"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }

[features]
default = []
from_env = []
