[package]
name = "imgurs-model"
version = "0.2.0"
authors = ["Filippo Berto <berto.f@protonmail.com>"]
edition = "2018"
categories = ["api-bindings"]
keywords = ["Imgur", "api"]
repository = "https://github.com/bertof/Imgurs"
license = "MIT"
description = "A typed and safe model of the Imgur API"

[dependencies]
clap = { version = "4", features = [ "env", "derive", "wrap_help" ] }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
time = { version = "0.3", features = [ "serde", "macros", "serde-human-readable", "serde-well-known" ] }
url = { version = "2", features = [ "serde" ] }

[features]
default = []
from_env = []
